applets/pager: Clamp to screen size if only showing one screen

Otherwise windows will spill into the gap/next VD.
BUG:467509
FIXED-IN:5.27.4